--- a/projet.html
+++ b/projet.html
@@ -38,16 +38,20 @@
         <a href="tp2/tp2.html" target="_blank"><img src="pjt4.png" width="150px" height="150px"></a>
         <td></td>
       </td>
-  </tr>
-        <br>
-        <td></td><td>
+       </tr>
+       <br>
+        <tr>
+      <td>
         <a href="menu1.html"><img src="pjt5.png" width="150px" height="150px"></a>
+          <td></td><td>
+        <a href="cvmb.html" target="_blank"><img src="pjt6.png" width="150px" height="150px"></a>
         <td></td>
       </td>
        </tr>
        <br>
-        <td></td><td>
-        <a href="cvmb.html" target="_blank"><img src="pjt6.png" width="150px" height="150px"></a>
+        <tr>
+      <td>
+        <a href="sousmenu.html" target="_blank"><img src="pjt7.png" width="150px" height="150px"></a>
         <td></td>
       </td>
        </tr>
