--- a/sommaire.html
+++ b/sommaire.html
@@ -17,7 +17,9 @@
 <a href="tuto2.html" target="f2"><img src="tuto2.png" alt="Projet 1"></a><br><br>
 <a href="tableau1.html" target="f2"><img src="tableau1.png" alt="Projet 1"></a><br><br>
 <a href="tableau2.html" target="f2"><img src="tableau2.png" alt="Projet 1"></a><br><br>
-<a href="projet.html" target="f2"><img src="projet1.png" alt="Projet 1"></a>
+<a href="projet.html" target="f2"><img src="projet1.png" alt="Projet 1"></a><br><br>
+<a href="projetjs.html" target="f2"><img src="projetjs.png" alt="Projet 1"></a>
+
 
 
 </body>
