--- a/projet.html
+++ b/projet.html
@@ -51,7 +51,7 @@
        <br>
         <tr>
       <td>
-        <a href="sousmenu.html" target="_blank"><img src="pjt7.png" width="150px" height="150px"></a>
+        <a href="sousmenu.html" target="_blank"><img src="pjt7.PNG" width="150px" height="150px"></a>
         <td></td>
       </td>
        </tr>
