--- a/bases.html
+++ b/bases.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <marquee scrollamount=20> Projet Bases de données </marquee>
-<marquee scrollamount=20> <img src="bases.png" width="50"
+<marquee scrollamount=20> <img src="bases.PNG" width="50"
     height="50"> </marquee>
     <hr>
     <table border="0" width="20%">
