--- a/buttonbases.html
+++ b/buttonbases.html
@@ -15,7 +15,7 @@
             <h1> Location voitures</h1>
 	<button onclick="window.location.href='location_voiture.SQL'">Fichier SQL BDD</button>
     <button onclick="window.location.href='bases.rtf'">Fichier Cours SQL</button>
-    <img src="voiture.png">
+    <img src="voiture.PNG">
 </center>
 
 </div>
