--- a/sommaire.html
+++ b/sommaire.html
@@ -10,7 +10,7 @@
 <center><h1>Sommaire :</h1>
 <br>
 <hr>
-<a href="acceuil.html" target="f2"><img src="acceuil.PNG" alt="Projet 1"></a></a><br><br>
+<a href="acceuil.html" target="f2"><img src="acceuil.png" alt="Projet 1"></a></a><br><br>
 <a href="formulaire.html" target="f2"><img src="formulaire.png" alt="Projet 1"></a></a><br><br>
 <a href="position.html" target="f2"><img src="position.png" alt="Projet 1"></a><br><br>
 <a href="tuto.html" target="f2"><img src="tuto1.png" alt="Projet 1"></a><br><br>
